test_suite/tests/ui/static_text/empty_expr.rs
use cstree::Syntax;

#[derive(Debug, Clone, Copy, PartialEq, Eq, Syntax)]
#[repr(u32)]
pub enum SyntaxKind {
    A,
    #[static_text()]
    B,
}

fn main() {}
